--- a/src/GUI/ModManager/Views/Settings/KeybindingsView.axaml
+++ b/src/GUI/ModManager/Views/Settings/KeybindingsView.axaml
@@ -70,7 +70,7 @@
 			</ItemsControl.ItemTemplate>
 		</ItemsControl>
 
-		<Grid x:Name="KeyConfirmationGrid"
+		<Grid Name="KeyConfirmationGrid"
 		    HorizontalAlignment="Stretch"
 		    VerticalAlignment="Stretch"
 		    IsHitTestVisible="False"
