--- a/src/GUI/ModManager/Views/StatsValidator/StatsValidatorLineView.axaml
+++ b/src/GUI/ModManager/Views/StatsValidator/StatsValidatorLineView.axaml
@@ -18,7 +18,7 @@
 			    Text="Hellooooooooooo" />
 		</Border>
 	</Design.PreviewWith>
-	<controls:HighlightingTextBlock x:Name="LineTextBlock"
+	<controls:HighlightingTextBlock Name="LineTextBlock"
 	    Padding="4"
 	    HighlightBackground="Transparent"
 	    HighlightForeground="OrangeRed"
